<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidAutoIdrive</string>
    <string name="permlab_accessNotifications">IDrive Notification Access</string>
    <string name="permlab_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="permdesc_accessNotifications">IDrive Notification Access</string>
    <string name="permdesc_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="notification_title">Android Auto for IDrive</string>
    <string name="notification_description">Connected to Car</string>
    <string name="notification_description_chassiscode">Connected to %s</string>
    <string name="notification_description_bmw">Connected to BMW</string>
    <string name="notification_description_mini">Connected to Mini</string>

    <!-- The text to show in the Intent Receiver when offering apps to navigate with -->
    <string name="navigation_listener_bmw">BMW Navigation</string>
    <string name="navigation_listener_mini">MINI Navigation</string>
    <!-- Labels on the navigation trigger activity -->
    <string name="lbl_navigation_listener_searching">Searching for destination</string>
    <string name="lbl_navigation_listener_parsefailure">Could not locate destination</string>
    <string name="lbl_navigation_listener_pending">Starting navigation</string>
    <string name="lbl_navigation_listener_success">Success</string>

    <!-- Menu Titles -->
    <string name="menu_setup">Setup</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_music">Music</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_assistants">Assistants</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>

    <string name="spawn_test_notification">Test Notification</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="notification_popups">Notification Popups</string>
    <string name="notification_popups_passenger">Popups with passenger</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_readout">Speak when viewing notifications</string>
    <string name="notification_readout_popup">Speak new notifications</string>
    <string name="notification_readout_popup_passenger">… with a passenger</string>
    <string name="lbl_popupVersion">Popups only work with IDrive4</string>
    <string name="lbl_smsPermission">Grant the SMS permission to view pictures from incoming SMS images in the car. The text itself is always visible.</string>

    <string name="enable_google_maps">Enable Google Maps</string>
    <string name="lbl_widescreen_map">Widescreen Map</string>
    <string name="lbl_map_invert_zoom">Invert zoom direction</string>
    <string name="gmapStyleLabel">Map Style</string>
    <string name="lbl_music_apps">Music Apps</string>
    <string name="musicAppIcon">App Icon</string>
    <string name="musicAppNowPlaying">Now Playing</string>
    <string name="musicAppControllable">Controllable While Running</string>
    <string name="musicAppConnectable">Fully Controllable</string>
    <string name="musicAppBrowseable">Browseable</string>
    <string name="musicAppSearchable">Searchable</string>
    <string name="musicAppUnavailable">Unavailable</string>
    <string name="musicAppHidden">Hidden</string>
    <string name="enable_audio_context">Force Audio Focus</string>
    <string name="enable_spotify_layout">Always appear as Spotify app in IDrive5+</string>
    <string name="lbl_grant_sessions">Control over active music apps:</string>
    <string name="lbl_grant">Grant</string>
    <string name="musicAppNotes_unauthorizedSpotify">Tap here to authorize Spotify access</string>
    <string name="musicAppNotes_oldSpotify">Please downgrade Spotify for full functionality (Searching)</string>
    <string name="musicAppNotes_oldSpotifyInstructions">This app can only provide full control over Spotify up to version 8.4.96.953, such as searching. For full control, please download an older version, from APKPure or similar.</string>
    <string name="musicAppNotes_spotify_apiNotFound">Please install the official Spotify client</string>
    <string name="musicAppNotes_spotify_apiUnavailable">Please confirm internet connectivity and disable any ad blocking</string>

    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="btn_configure">Configure …</string>
    <string name="lbl_error">Error</string>

    <string name="connectionStatusMissingConnectedApp">Can\'t find Connected or Connected Classic app</string>
    <string name="connectionStatusWaiting">Waiting for connection to car</string>
    <string name="connectionStatusConnected">Connected to %s</string>

    <string name="nowplaying_notconnected">&lt;Not Connected&gt;</string>
    <string name="nowplaying_unknown">&lt;Unknown&gt;</string>

    <string name="txt_setup_bmw_ready">The app is ready to connect to a BMW</string>
    <string name="txt_setup_mini_ready">The app is ready to connect to a Mini</string>
    <string name="txt_setup_bmw_missing">Not ready to connect to a BMW:</string>
    <string name="txt_setup_mini_missing">Not ready to connect to a Mini:</string>
    <string name="txt_setup_bmw_mine_detected">The new My BMW app is installed, which might cause problems with BMW Connected and is not supported</string>
    <string name="txt_setup_mini_mine_detected">The new MINI app is installed, which might cause problems with Mini Connected and is not supported</string>
    <string name="txt_setup_security_missing">Security Service is unreachable:</string>
    <string name="txt_setup_bt_disconnected">No car connected over Bluetooth</string>
    <string name="txt_setup_bt_connected">Car is connected over Bluetooth</string>
    <string name="txt_setup_a2dp_disconnected">Bluetooth Music is not connected</string>
    <string name="txt_setup_a2dp_connected">Bluetooth Music is connected</string>
    <string name="txt_setup_spp_disconnected">Bluetooth Apps are not supported</string>
    <string name="txt_setup_spp_connected">Bluetooth Apps are supported</string>
    <string name="txt_setup_usb_disconnected">No car connected over USB</string>
    <string name="txt_setup_usb_connected">USB connected in Charging mode</string>
    <string name="txt_setup_enable_usbmtp">Switch the phone\'s USB mode to File Transfer</string>
    <string name="txt_setup_enable_usbacc">Enable the USB Accessory Mode or Apps option in the car for this %s</string>
    <string name="txt_setup_usbmtp_connected">USB connected in Storage mode</string>
    <string name="txt_setup_usbacc_connected">USB connected in Accessory mode</string>
    <string name="txt_setup_bcl_init_stuck">Apps Connection is not enabled:</string>
    <string name="txt_setup_enable_bcl_mode">Enable the Apps option in the car for this %s</string>
    <string name="txt_setup_bcl_disconnected">Apps Connection is not ready:</string>
    <string name="txt_setup_enable_bclspp">Try toggling Bluetooth Music or connecting over USB</string>
    <string name="txt_setup_bcl_connecting">Apps Connection is connecting</string>
    <string name="txt_setup_bcl_connected">Apps Connection is running</string>
    <string name="txt_setup_bcl_connected_transport">Apps Connection is running over %s</string>
    <string name="txt_build_info">Build Version: %1$s %2$s</string>
    <string name="txt_bcl_report">BCL Tunnel Performance:</string>
    <string name="txt_car_capabilities">Reported Car Capabilities:</string>
    <string name="btn_install">Install</string>
    <string name="btn_install_bmw">Install BMW Connected</string>
    <string name="btn_install_mini">Install Mini Connected</string>
    <string name="btn_install_bmwclassic">Install BMW Connected Classic</string>
    <string name="btn_install_miniclassic">Install Mini Connected Classic</string>
    <string name="lbl_advanced_settings">Show Advanced Settings</string>
    <string name="lbl_assistant">Voice Assistant (Beta)</string>
    <string name="lbl_assistant_empty">None found</string>
    <string name="notification_assistant_tap">Tap to launch %s</string>
    <string name="notification_assistant_description">Only necessary because the screen is on</string>
    <string name="donation_title">Like this app?</string>
    <string name="donation_text">Consider showing your support with a small donation</string>


    <!-- car app strings -->
    <string name="NOTIFICATIONS_TITLE">Notifications</string>
    <string name="NOTIFICATIONS_EMPTY_LIST">No Notifications</string>
    <string name="NOTIFICATION_CLEAR_ACTION">Clear</string>
    <string name="NOTIFICATION_OPTIONS">Options</string>
    <string name="NOTIFICATION_POPUPS">Notification Popups</string>
    <string name="NOTIFICATION_POPUPS_PASSENGER"> … with a passenger</string>
    <string name="NOTIFICATION_SOUND">Play notification sound</string>
    <string name="NOTIFICATION_READOUT">Speak when viewing notifications</string>
    <string name="NOTIFICATION_READOUT_POPUP">Speak new notifications</string>
    <string name="NOTIFICATION_READOUT_POPUP_PASSENGER"> … with a passenger</string>
    <string name="READOUT_DESCRIPTION">This app is used for readout purposes</string>

    <string name="MAP_ACTION_VIEWMAP">View Full Map</string>
    <string name="MAP_ACTION_SEARCH">Search for Place</string>
    <string name="MAP_ACTION_CLEARNAV">Clear Navigation</string>

    <string name="MUSIC_APPLIST_TITLE">Apps</string>
    <string name="MUSIC_APPLIST_EMPTY">&lt;No Apps&gt;</string>
    <string name="MUSIC_CUSTOMACTIONS_TITLE">Actions</string>
    <string name="MUSIC_DISCONNECTED">&lt;Not Connected&gt;</string>
    <string name="MUSIC_BROWSE_TITLE">Browse</string>
    <string name="MUSIC_BROWSE_EMPTY">&lt;Empty&gt;</string>
    <string name="MUSIC_BROWSE_LOADING">&lt;Loading&gt;</string>
    <string name="MUSIC_BROWSE_SEARCHING">&lt;Searching&gt;</string>
    <string name="MUSIC_BROWSE_ACTION_JUMPBACK">Jump Back</string>
    <string name="MUSIC_BROWSE_ACTION_FILTER">Filter</string>
    <string name="MUSIC_BROWSE_ACTION_SEARCH">Search</string>
    <string name="MUSIC_BROWSE_PLAY_FROM_SEARCH">Play From Search</string>
    <string name="MUSIC_QUEUE_TITLE">Now Playing</string>
    <string name="MUSIC_QUEUE_EMPTY">&lt;Empty Queue&gt;</string>
    <string name="MUSIC_SKIP_PREVIOUS">Back</string>
    <string name="MUSIC_SKIP_NEXT">Next</string>
    <string name="MUSIC_TURN_SHUFFLE_UNAVAILABLE">Shuffle Unavailable</string>
    <string name="MUSIC_TURN_SHUFFLE_ON">Turn Shuffle On</string>
    <string name="MUSIC_TURN_SHUFFLE_OFF">Turn Shuffle Off</string>
    <string name="MUSIC_TURN_REPEAT_UNAVAILABLE">Repeat Unavailable</string>
    <string name="MUSIC_TURN_REPEAT_ALL_ON">Turn Repeat All On</string>
    <string name="MUSIC_TURN_REPEAT_ONE_ON">Turn Repeat One On</string>
    <string name="MUSIC_TURN_REPEAT_OFF">Turn Repeat Off</string>

    <plurals name="MUSIC_ACTION_SEEK_BACK">
        <item quantity="one">Seek back %s second</item>
        <item quantity="other">Seek back %s seconds</item>
    </plurals>
    <plurals name="MUSIC_ACTION_SEEK_FORWARD">
        <item quantity="one">Seek forward %s second</item>
        <item quantity="other">Seek forward %s seconds</item>
    </plurals>

    <string name="MUSIC_SPOTIFY_REMOVE_FROM_COLLECTION">Dislike</string>
    <string name="MUSIC_SPOTIFY_START_RADIO">Make Radio Station</string>
    <string name="MUSIC_SPOTIFY_ADD_TO_COLLECTION">Like</string>
    <string name="MUSIC_SPOTIFY_THUMB_UP">Thumb Up</string>
    <string name="MUSIC_SPOTIFY_THUMBS_UP_SELECTED">Thumbed Up</string>
    <string name="MUSIC_SPOTIFY_THUMB_DOWN">Thumb Down</string>
    <string name="MUSIC_SPOTIFY_THUMBS_DOWN_SELECTED">Thumbed Down</string>
</resources>
