<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_antenna_black_24dp"
            android:title="@string/menu_connection" />

        <!--
        <item
            android:id="@+id/nav_connection2"
            android:title="@string/menu_setup" />
            -->

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_outline_black_24dp"
            android:title="@string/menu_music" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_bell_black_24dp"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_assistants"
            android:icon="@drawable/ic_mic_none_black_24dp"
            android:title="@string/menu_assistants" />
        <!--
        <item
            android:title="@string/menu_navigation" />
            -->
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <!--
        <item
            android:title="@string/menu_support" />
            -->
    </group>
</menu>